samples/_failures_safe/1761626556_48ed7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87986e46.c: In function ‘main’:
./samples/SAFE/__tmp_87986e46.c:125:33: error: missing terminating " character
  125 |                 fprintf(stderr, "Invalid matrix element\n
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_87986e46.c:125:17: error: expected expression at end of input
  125 |                 fprintf(stderr, "Invalid matrix element\n
      |                 ^~~~~~~
./samples/SAFE/__tmp_87986e46.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87986e46.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87986e46.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87986e46.c:125:17: error: expected declaration or statement at end of input
